# rtmp_demo

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rtmp_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  mcro.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/rtmp_demo/: App.java  LivePusher.java  MainActivity.java
app/src/main/java/com/example/rtmp_demo/aouter/: API.java  SecondActivity.java
app/src/main/java/com/example/rtmp_demo/channel/: AudioChannel.java  CameraHelper.java  IChannel.java  VideoChannel.java
app/src/main/res/layout/: activity_image_grid.xml  activity_main.xml  activity_second.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rtmp_demo/: ExampleUnitTest.java
checkplugin/: build.gradle
checkplugin/src/main/groovy/com/rzf/checkplugin/: CheckConfig.java  CheckConfigInner.java  CheckConfigNext.java  CheckPlugin.groovy
gradle/wrapper/: gradle-wrapper.properties
repos/com/rzf/checkplugin/checkplugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
repos/com/rzf/checkplugin/checkplugin/1.0.0/: checkplugin-1.0.0.jar.md5  checkplugin-1.0.0.jar.sha1  checkplugin-1.0.0.pom  checkplugin-1.0.0.pom.md5  checkplugin-1.0.0.pom.sha1
(+11 files in other folders)
